add content in 7.0

--- a/7.0+CSS+Cascade/style.css
+++ b/7.0+CSS+Cascade/style.css
@@ -10,3 +10,15 @@ p {
   margin: 0;
   padding: 0;
 }
+.white-text {
+  color: white;
+
+}
+#outer-box {
+  background-color: purple;
+  padding: 10px;
+}
+.inner-box {
+  background-color: red;
+  padding: 10px;
+}
