--- a/7.1+Combining+Selectors/7.1 Combining Selectors/style.css
+++ b/7.1+Combining+Selectors/7.1 Combining Selectors/style.css
@@ -1,1 +1,10 @@
 /* Write your code here: */
+
+/*Group CSS Selector*/
+h1, h2 {
+    color:blueviolet
+}
+/*Child CSS Selector*/
+.box > p {
+    color: firebrick;
+}
